--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div>
-        <h1>Subscribe to the Newsletter</h1>
+        <h1>Test form</h1>
         <form>
             <!-- EMAIL AND PHONE-->
             <div class="mb-3">
